Jwt token and Login functionality added
