# models/Employee.js
@@ -1,4 +1,6 @@
-const mongoose = require('mongoose');
+const mongoose = require("mongoose");
+const jwt = require("jsonwebtoken");
+const bcrypt = require('bcryptjs')
 
 const EmployeeSchema = new mongoose.Schema({
   EmployeeID: {
@@ -6,27 +8,42 @@ const EmployeeSchema = new mongoose.Schema({
     required: true,
     unique: true,
   },
-  Company: {
-    type: mongoose.Schema.ObjectId,
-    ref: 'Company',
+
+  password: {
+    type: String,
+    minlength: [6, "Please provide a password with min length : 6 "],
     required: true,
   },
+
+  Company: {
+    type: mongoose.Schema.ObjectId,
+    ref: "Company",
+    required: true,
+  },
+
   Department: {
     type: mongoose.Schema.ObjectId,
-    ref: 'Department',
+    ref: "Department",
   },
+
+  Role: {
+    type: String,
+    required: true,
+  },
+
   Manager: {
     type: mongoose.Schema.ObjectId,
-    ref: 'Employee',
+    ref: "Employee",
     default: null,
   },
+
   Name: {
     type: String,
     required: true,
   },
   Gender: {
     type: String,
-    enum: ['Male', 'Female', 'Other'],
+    enum: ["Male", "Female", "Other"],
     required: true,
   },
   DateOfBirth: {
@@ -45,33 +62,51 @@ const EmployeeSchema = new mongoose.Schema({
       validator: function (v) {
         return /^[\w-\.]+@([\w-]+\.)+[\w-]{2,4}$/.test(v);
       },
-      message: props => `${props.value} is not a valid email!`
-    }
+      message: (props) => `${props.value} is not a valid email!`,
+    },
   },
   Phone: {
     type: String,
     required: true,
     validate: {
       validator: function (v) {
-        return /^\+?[0-9]{7,15}$/.test(v); 
+        return /^\+?[0-9]{7,15}$/.test(v);
       },
-      message: props => `${props.value} is not a valid phone number!`
-    }
+      message: (props) => `${props.value} is not a valid phone number!`,
+    },
   },
   Address: {
     type: String,
     required: true,
   },
-  Leave: {
+  Leave_balance: {
     type: Number,
-    default:0,
-    required: true,
-  },
-  Balance: {
-    type: Number,
-    default:0,
+    default: 0,
     required: true,
   },
 });
 
-module.exports = mongoose.model('Employee', EmployeeSchema);
+EmployeeSchema.pre("save", async function (next) {
+  if (!this.isModified("password")) {
+    next();
+  }
+  
+  const salt = await bcrypt.genSalt(10);
+  
+  this.password = await bcrypt.hash(this.password, salt);
+  next();
+});
+
+EmployeeSchema.methods.generateJwtFromUser = function () {
+  const { JWT_SECRET_KEY, JWT_EXPIRE } = process.env;
+
+  payload = {
+    id: this._id,
+  };
+
+  const token = jwt.sign(payload, JWT_SECRET_KEY, { expiresIn: JWT_EXPIRE });
+
+  return token;
+};
+
+module.exports = mongoose.model("Employee", EmployeeSchema);
